--- a/TaskTraker/TaskTraker.Api/TaskTraker.Api.csproj
+++ b/TaskTraker/TaskTraker.Api/TaskTraker.Api.csproj
@@ -14,4 +14,9 @@
     <Folder Include="Controllers\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TaskTraker.Data\TaskTraker.Data.csproj" />
+    <ProjectReference Include="..\TaskTraker.Services\TaskTraker.Services.csproj" />
+  </ItemGroup>
+
 </Project>
