--- a/TaskTraker/TaskTraker.Services/TaskTraker.Services.csproj
+++ b/TaskTraker/TaskTraker.Services/TaskTraker.Services.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\TaskTraker.Data\TaskTraker.Data.csproj" />
+  </ItemGroup>
+
 </Project>
