--- a/TaskTraker/TaskTraker.Api/appsettings.json
+++ b/TaskTraker/TaskTraker.Api/appsettings.json
@@ -1,9 +1,12 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "TaskTraker": {
+        "ConnectionString": "Host=dpg-ct3049aj1k6c73b20alg-a.oregon-postgres.render.com;Port=5432;Username=tasktrakerdb_user;Password=yC2eBWCZ1DDLSWqG94O6sJcOwrZxagb9;Database=tasktrakerdb;"
+    },
+    "AllowedHosts": "*"
 }
