--- a/TaskTraker/TaskTraker.Api/appsettings.json
+++ b/TaskTraker/TaskTraker.Api/appsettings.json
@@ -6,7 +6,14 @@
         }
     },
     "TaskTraker": {
-        "ConnectionString": "Host=yC2eBWCZ1DDLSWqG94O6sJcOwrZxagb9@dpg-ct3049aj1k6c73b20alg-a.oregon-postgres.render.com;Port=5432;Username=tasktrakerdb_user;Password=yC2eBWCZ1DDLSWqG94O6sJcOwrZxagb9;Database=tasktrakerdb;"
+        "ConnectionString": "Host=dpg-ct3049aj1k6c73b20alg-a.oregon-postgres.render.com;Port=5432;Username=tasktrakerdb_user;Password=yC2eBWCZ1DDLSWqG94O6sJcOwrZxagb9;Database=tasktrakerdb;"
     },
-    "AllowedHosts": "*"
+    "AllowedHosts": "*",
+    "Kestrel": {
+        "Endpoints": {
+            "Http": {
+                "Url": "http://0.0.0.0:5000"
+            }
+        }
+    }
 }
